# CompressionTool

./: .gitignore  Cargo.toml  cargo.toml  rustfmt.toml  test
compression/: Cargo.toml  test  test.huff
compression/src/: main.rs
demo/: .gitignore  package.json  tsconfig.json
demo/src/: App.tsx  diagram.tsx  index.tsx
demo/src/scripts/: decode.ts  (+4 more)
examples/: cli.rs  simple.rs  verify.rs
examples/resources/: Class of '29.txt  E Being.txt  History of English Humour, Vol. 1 (of 2).txt  In The Fire Of The Forge, Complete.txt  Interviews (1998-2001).txt  Lobo, Rag and Vixen.txt  Lucretia, Volume 3..txt  Mrs. Skaggs's Husbands and Other Stories.txt  Notes and Queries, Number 82, May 24, 1851.txt  On the Method of Zadig.txt  Pincher Martin, O.D..txt  Pirate Gold.txt  Portrait Miniatures.txt  Rambling Recollections of Chelsea.txt  The Ambulance Made Two Trips.txt  The Day of the Confederacy.txt  The Gay Gnani of Gingalee.txt  The Grey Woman and other Tales.txt  The Khaki Boys Over the Top.txt  The Lives of the Poets of Great Britain and Ireland (1753),Vol. V..txt  The Tale of Peter Mink.txt  Travels in Peru, on the Coast, in the Sierra, Across the Cordilleras and the Andes, into the Primeval Forests.txt  Vacation Verse.txt
interface/: Cargo.toml
src/: huffman.rs  lib.rs  main.rs  mod.rs
src/bitstream/: decode_stream.rs  encode_stream.rs
src/core/: constant.rs  encoder.rs
src/file/: constant.rs  decoder.rs  encoder.rs
src/huffman/: huffman.rs  mod.rs
src/table/: code.rs  encoding.rs  lookup.rs  table.rs
src/tree/: internal.rs  leaf.rs  node.rs  tree.rs
(+31 files in other folders)
