[package]
name = "compression"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = 'src/huffman.rs'

[dependencies]
itertools = "^0.13.0"
wasm-bindgen = "0.2.92"
# clap = { version = "4.5.4", features = ["derive"] }
# colored = "2.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
