[package]
name = "compression"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = 'src/mod.rs'

[dependencies]
itertools = "^0.13.0"

# colored = "2.1.0"
# wasm-bindgen = "0.2.92"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
indicatif = "0.17.8"
unbytify = "0.2.0"
# wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.dev]
opt-level = 3


[[example]] # <--- declare the executable
name = "cli" # <--- as an example
